--- a/Sequenzememory/sequencememory.html
+++ b/Sequenzememory/sequencememory.html
@@ -18,10 +18,16 @@
     <hr>
 
         <div>
-            <p>Choose your own word by writing it down or choose a random one:</p>
+            <h5>Choose your own word by writing it down or choose a random one:</h5>
             <input id="enterWord" type="text" name="Enter your won word" placeholder="Enter a word and press enter">
-            <p>or</p>
+            <h5>or</h5>
             <button id="randomWord">Random Word</button>
+            <h5>Choose the time you want to watch the Charachters and the actual playing time: </h5>
+            <input id="timeWatch" type="number" name="Time you watch" placeholder="Time-Watch in sec">
+            <input id="timeGame" type="number" name="Playing time" placeholder="Time-Game in sec">
+            <h5>Start the Game!</h5>
+            <button id="startGame">Start</button>
+
         </div>
 
         
